# real-intent

./: .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml
bigdbm/: __init__.py  client.py  error.py  iab_categories.csv  internal_logging.py  requirements.txt  schemas.py  taxonomy.py  taxonomy.tsv
bigdbm/analyze/: __init__.py  base.py
bigdbm/deliver/: __init__.py  base.py  csv.py  followupboss.py
bigdbm/format/: __init__.py  csv.py
bigdbm/process/: __init__.py  base.py  fill.py  simple.py
bigdbm/validate/: __init__.py  base.py  email.py  gender.py  home_attrs.py  phone.py  pii.py  simple.py
docs/: README.md  SUMMARY.md
docs/best-practices/: founders-picks.md
docs/blog-articles/: anticipate-and-address-buyer-resistance-using-intent-data.md  how-intent-data-helps-you-anticipate-concession-requests.md  how-intent-data-reveals-your-buyers-decision-making-style.md  leveraging-emotional-connection-in-real-estate-negotiations.md  the-fcc-1-to-1-consent-update-how-will-it-impact-your-marketing-strategy-in-2025.md  uncovering-the-unconscious-patterns-behind-real-estate-choices.md  unlocking-hidden-demand-in-niche-real-estate-markets.md
docs/featured-videos/: customize-drip-campaigns-with-chatgpt.md  facebook-retargeting-ad-strategy-for-realtors.md  finding-your-niche-in-real-estate.md  get-chatgpt-to-recommend-you-as-a-realtor.md  how-to-turn-likes-into-leads.md  how-to-win-luxury-listing-presentations.md  open-house-strategies-that-converts.md  rank-as-1-realtor-in-your-area-on-google-for-free.md  run-facebook-ads.md
docs/integration-support/: follow-up-boss.md  gohighlevel.md  kvcore.md  webhook.md
docs/integrations/: follow-up-boss.md  kvcore.md  webhook.md
docs/onboarding-documents/: data-dictionary.md  faqs.md
real_intent/: __init__.py  client.py  error.py  iab_categories.csv  internal_logging.py  schemas.py  taxonomy.py  taxonomy.tsv  utils.py
real_intent/analyze/: __init__.py  base.py
real_intent/deliver/: __init__.py  base.py  csv.py  csv_insights.py  events.py  utils.py  webhook.py
real_intent/events/: __init__.py  base.py  errors.py  main.py  models.py  utils.py
real_intent/process/: __init__.py  base.py  fill.py  simple.py
real_intent/validate/: __init__.py  (+7 more)
scripts/: crm_backfill.py  verify_dependencies.py
tests/: conftest.py  requirements.txt  test_analyze.py  test_client.py  test_custom_field_matching.py  test_dns_validator.py  test_event_generator.py  test_events_generator.py  test_followupboss.py  test_format.py  test_kvcore.py  test_logging.py  test_neoworlder.py  test_pii_fake.py  test_processing.py  test_taxonomy.py  test_validation.py  test_zapier.py
(+64 files in other folders)
