[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real-intent"
version = "v3.1.1"
dependencies = [
  "requests",
  "pandas",
  "pydantic>=2.10.4",
]
requires-python = ">=3.12"
authors = [
  {name = "Prerit Das", email = "prerit@standarddao.finance"},
]
maintainers = [
  {name = "Prerit Das", email = "prerit@standarddao.finance"},
]
description = "Standard Labs internal SDK for Real Intent."
readme = "README.md"
classifiers = [
  "Programming Language :: Python"
]

[tool.setuptools.package-data]
"real_intent" = ["*.tsv", "*.csv"]

[project.urls]
Homepage = "https://standarddao.finance"
Repository = "https://github.com/Standard-Labs/real-intent.git"

[project.optional-dependencies]
logfire = ["logfire>=2.11.1"]
ai = ["openai>=1.58.1"]
events = ["scrapybara>=2.0.6", "playwright>=1.49.1", "httpx==0.27.0"]
pdf = ["reportlab>=4.2.5"]
