[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real-intent"
version = "v4.7.3"
dependencies = [
  "requests",
  "pandas",
  "pydantic>=2.10.4",
]
requires-python = ">=3.13"
authors = [
  {name = "Prerit Das", email = "prerit@standard.ad"},
]
maintainers = [
  {name = "Prerit Das", email = "prerit@standard.ad"},
]
description = "Standard's internal SDK for Real Intent."
readme = "README.md"
classifiers = [
  "Programming Language :: Python"
]

[tool.setuptools.package-data]
"real_intent" = ["*.tsv", "*.csv"]

[project.urls]
Homepage = "https://realintent.co"
Repository = "https://github.com/Standard-Labs/real-intent.git"

[project.optional-dependencies]
logfire = ["logfire>=3.16.2"]
ai = ["openai>=1.97.0"]
events = ["scrapybara>=2.3.0", "playwright>=1.49.1", "httpx==0.27.0", "anthropic>=0.49.0", "tldextract>=5.0.0"]
pdf = ["reportlab>=4.4.2"]
dns = ["pymongo"]
